-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17, 19, 20, 21
-
Component/s: hotspot
-
b12
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8307017 | 20u-cpu | Sergey Bylokhov | P4 | Resolved | Fixed | master |
| JDK-8304981 | 20.0.2 | Sergey Bylokhov | P4 | Resolved | Fixed | b03 |
| JDK-8311234 | 17.0.9-oracle | Kevin Walls | P4 | Resolved | Fixed | b01 |
| JDK-8304901 | 17.0.8 | Sergey Bylokhov | P4 | Resolved | Fixed | b01 |
| JDK-8311235 | 11.0.21-oracle | Kevin Walls | P4 | Resolved | Fixed | b01 |
| JDK-8304909 | 11.0.20 | Sergey Bylokhov | P4 | Resolved | Fixed | b01 |
The issue can be reproduced by the "test/jdk/sun/management/jmxremote/startstop/JMXStatusTest.java" if the hostname is too long.
- backported by
-
JDK-8304901 jcmd: ManagementAgent.status truncates the text longer than O_BUFLEN
-
- Resolved
-
-
JDK-8304909 jcmd: ManagementAgent.status truncates the text longer than O_BUFLEN
-
- Resolved
-
-
JDK-8304981 jcmd: ManagementAgent.status truncates the text longer than O_BUFLEN
-
- Resolved
-
-
JDK-8307017 jcmd: ManagementAgent.status truncates the text longer than O_BUFLEN
-
- Resolved
-
-
JDK-8311234 jcmd: ManagementAgent.status truncates the text longer than O_BUFLEN
-
- Resolved
-
-
JDK-8311235 jcmd: ManagementAgent.status truncates the text longer than O_BUFLEN
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/e12516d4
-
Commit
openjdk/jdk17u-dev/637155e3
-
Commit
openjdk/jdk20u/22c18e9d
-
Commit
openjdk/jdk/a43931b7
-
Review
openjdk/jdk11u-dev/1795
-
Review
openjdk/jdk17u-dev/1196
-
Review
openjdk/jdk20u/15
-
Review
openjdk/jdk/12724