8303102: jcmd: ManagementAgent.status truncates the text longer than O_BUFLEN