src/hotspot/share/services/diagnosticCommand.cpp
@@ -807,7 +807,8 @@ void JMXStatusDCmd::execute(DCmdSource source, TRAPS) {
   if (str != nullptr) {
       char* out = java_lang_String::as_utf8_string(str);
       if (out) {
-          output()->print_cr("%s", out);
+          // Avoid using print_cr() because length maybe longer than O_BUFLEN
+          output()->print_raw_cr(out);
           return;
       }
   }
